# horosa-skill

./: README.md  README.zh-CN.md  README_EN.md  server.json
docs/: EVALUATION.md  (+5 more)
horosa-skill/: .env.example  README.md  pyproject.toml
horosa-skill/examples/clients/: openclaw-mcp.md  openclaw-mcporter.sample.json
horosa-skill/horosa-core-js/src/tools/: index.js  tongshefa.js
horosa-skill/scripts/: build_knowledge_index.py  generate_sbom.py  run_benchmark.py  run_full_self_check.py  run_openclaw_full_self_check.py  verify_readme_links.py  verify_server_json.py  verify_vendor_runtime_sources.py
horosa-skill/scripts/runtime_templates/windows/: start_horosa_local.ps1
horosa-skill/src/horosa_skill/: client_tools.py  config.py  evaluation_lock.py  input_normalization.py  service.py  testing_payloads.py  tracing.py
horosa-skill/src/horosa_skill/benchmark/: __init__.py  runner.py
horosa-skill/src/horosa_skill/benchmark/data/: horosa_bench.json
horosa-skill/src/horosa_skill/engine/: decennials.py  registry.py  router.py
horosa-skill/src/horosa_skill/exports/: registry.py
horosa-skill/src/horosa_skill/knowledge/: store.py
horosa-skill/src/horosa_skill/memory/: store.py
horosa-skill/src/horosa_skill/runtime/: manager.py
horosa-skill/src/horosa_skill/schemas/: common.py  tools.py
horosa-skill/src/horosa_skill/surfaces/: cli.py  mcp_server.py
horosa-skill/tests/: test_benchmark.py  test_cli.py  test_client_tools.py  test_config.py  test_local_js_tools.py  test_mcp_server.py  test_memory_store.py  test_runtime_manager.py  test_service.py  test_tracing.py
(+4 files in other folders)
